Fixed scrolling issue on mobile in chrome which was caused due to loader having translatey -100%, Fixed social section by removing opacity 0 from elements

--- a/src/components/loader.css
+++ b/src/components/loader.css
@@ -15,7 +15,7 @@
   }
 
   .loader-main.slide-up {
-    transform: translateY(-100%);
+    transform: translateY(-200%);
   }
 
   .loader-container {
