--- a/src/section/social_section/socialsection.css
+++ b/src/section/social_section/socialsection.css
@@ -40,7 +40,7 @@
     align-items: center;
     position: relative;
     overflow: hidden;
-    padding: 0 0 12vh 0;
+    padding: 0 0 14vh 0;
 }
 
 .social-orbits{
@@ -50,6 +50,7 @@
     will-change: transform;
     backface-visibility: hidden;
     transform: translateZ(0);
+    padding-top: 50px;
 }
 
 .social{
@@ -61,6 +62,7 @@
     will-change: transform;
     backface-visibility: hidden;
     transform: translateZ(0);
+    padding-top: 50px;
 }
 
 .linkedin{
